@@ -1,3 +1,7 @@
+Mon Jan  8 11:41:41 2001  Owen Taylor  <otaylor@redhat.com>
+
+	* Makefile.am (INCLUDES): Add @x_cflags@
+
 2001-01-02  Havoc Pennington  <hp@redhat.com>
 
 	* gdk-pixbuf-xlib-2.0.pc.in (Description): fix up description a bit.
